syntax = "proto3";

// name of the package
package auth;

//what is the go package called
option go_package = "/auth";

//  define the data being passed around

message CreateUserRequest {
  M_User argUser = 1;
  string password = 2;
}

message M_User {
  string email = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
}

message CreateUserResponse {
  bool created = 1;
  string username = 2;
}


// PAYLOAD
message AuthRequest {
  User argUser = 1;
}

message User {
  string username = 1;
  string password = 2;
}

// RESPONSE
message AuthResponse {
  bool authed = 1;
}

service AuthService { 
  rpc AuthUser(AuthRequest) returns (AuthResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}